<resources>

    <!-- Button -->
    <string name="btn_welcome">Welcome</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_show">Show</string>
    <string name="btn_show_more">Show More</string>


    <!-- Navigation Menu -->
    <string name="nav_menu_header_title_text">making sense of money</string>
    <string name="nav_menu_tab_home">Home</string>
    <string name="nav_menu_tab_defensive">Defensive</string>
    <string name="nav_menu_tab_conservative">Conservative</string>
    <string name="nav_menu_tab_balanced">Balanced</string>
    <string name="nav_menu_tab_balanced_growth">Balanced Growth</string>
    <string name="nav_menu_tab_growth">Growth</string>
    <string name="nav_menu_tab_aggressive_growth">Aggressive Growth</string>
    <string name="nav_menu_drawer">Drawer</string>
    <string name="nav_menu_tab_questionnaire">Questionnaire</string>
    <string name="nav_menu_tab_submit">Submit</string>
    <string name="nav_menu_tab_submitted">Submitted</string>


    <!-- Nav graph labels -->
    <string name="nav_investor_type">Investor Type</string>
    <string name="nav_welcome_to_home">Home</string>
    <string name="nav_questionnaire">Questionnaire</string>
    <string name="nav_questionnaire_result">Questionnaires Result</string>
    <string name="nav_result_submit">Submit</string>
    <string name="nav_result_submitted">Submitted</string>

    <!-- Investor Type -->
    <string name="fund_details_title">Investment objectives and strategy</string>
    <string name="fund_mix_title">Target investment mix</string>
    <string name="fund_growth_assets">Growth Assets</string>
    <string name="fund_income_assets">Income Assets</string>


    <!-- Chart -->
    <string name="cash_and_cash_equivalents">Cash and cash equivalents</string>
    <string name="listed_property">Listed property</string>
    <string name="international_equities">International equities</string>
    <string name="nz_fixed_interest">New Zealand fixed interest</string>
    <string name="inter_fixed_interest">International fixed interest</string>
    <string name="aus_equities">Australasian equities</string>

    <!-- Questionnaire -->
    <string name="questionnaire_score">Score</string>
    <string name="questionnaire_question_index">Question</string>
    <string name="app_name">KiwisaverInvestment</string>
    <string name="dialog_title_home">Back</string>
    <string name="dialog_title_home_message">Back to home?</string>
    <string name="dialog_title_quit">Quit</string>
    <string name="dialog_title_quit_message">Do you want to quit?</string>


    <!-- Questionnaire Result -->
    <string name="total_score">Your total score:</string>
    <string name="investor_type_title">Your investor type is:</string>

    <!-- Result Submit -->
    <string name="submit_name">Name</string>
    <string name="submit_email">Email</string>
    <string name="submit_phone">Phone</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="phone_hint">9/10 digit mobile number</string>
    <string name="dialog_ok">Ok</string>
    <string name="submitted_message">Your application has been successfully submitted. Your data has been cleared, and you can now return to the home page.</string>
    <string name="dialog_stop_title">Sorry</string>
    <string name="dialog_stop_message">You have to finish questionnaire first.</string>

    <!-- Main Screen -->
    <string name="main_screen_titles">Discover your financial future with Booster Kiwisaver today!</string>


</resources>