<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainscreen">

    <fragment
        android:id="@+id/mainscreen"
        android:name="com.example.kiwisaverinvestment.ui.mainscreen.MainScreenFragment"
        android:label="@string/nav_welcome_to_home"
        tools:layout="@layout/fragment_main_screen">

        <action
            android:id="@+id/main_to_questionnaire"
            app:destination="@id/questionnaire" />

        <action
            android:id="@+id/main_to_investor_type"
            app:destination="@id/investor_type" />
        <argument
            android:name="investor_type"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/investor_type"
        android:name="com.example.kiwisaverinvestment.ui.description.InvestorTypeFragment"
        android:label="@string/nav_investor_type"
        tools:layout="@layout/fragment_investor_type">

        <action
            android:id="@+id/to_investor_types"
            app:destination="@id/mainscreen" />
        <argument
            android:name="investor_type"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/questionnaire"
        android:name="com.example.kiwisaverinvestment.ui.questionnaire.QuestionnaireFragment"
        android:label="@string/nav_questionnaire">

        <action
            android:id="@+id/to_questionnaire_result"
            app:destination="@+id/questionnaire_result" />

    </fragment>

    <fragment
        android:id="@+id/questionnaire_result"
        android:name="com.example.kiwisaverinvestment.ui.questionnaire.QuestionnaireResultFragment"
        android:label="@string/nav_questionnaire_result">

        <action
            android:id="@+id/result_to_investor_type_details"
            app:destination="@id/investor_type" />

    </fragment>

</navigation>