<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.submit.SubmitFragment">
    
    <LinearLayout
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textview_margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-black"
            android:text="@string/submit_name"
            android:textSize="@dimen/title_text_size_xlarge"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        
        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:hint="@string/name_hint" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textview_margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:fontFamily="sans-serif-black"
        android:text="@string/submit_email"
        android:textSize="@dimen/title_text_size_xlarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textview_margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/submit_phone"
            android:textSize="@dimen/title_text_size_xlarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:hint="@string/phone_hint" />

    </LinearLayout>

    <View
        android:id="@+id/gray_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progressbar_background" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/btn_width_large"
        android:layout_height="wrap_content"
        android:background="@drawable/button_light_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/nav_result_submit"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/primary_blue"
        android:fontFamily="sans-serif-black"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/textview_margin_large"
        android:src="@drawable/floatbutton_home"
        app:backgroundTint="@color/tertiary_yellow"
        app:elevation="6dp"
        app:borderWidth="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>