<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.description.InvestorTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/main_view_standard_margin"
        android:layout_marginLeft="@dimen/main_view_standard_margin"
        android:layout_marginRight="@dimen/main_view_standard_margin"
        android:layout_marginBottom="@dimen/main_view_standard_margin"
        android:padding="@dimen/main_view_padding">

        <TextView
            android:id="@+id/fund_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_size_large"
            android:textColor="@color/primary_blue"
            android:textStyle="bold"
            tools:text="Capital Guaranteed Fund" />


        <TextView
            android:id="@+id/fund_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_view_standard_margin"
            android:text="@string/fund_details_title"
            android:textSize="@dimen/title_text_size_medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recyclerview_height"
            android:layout_marginTop="@dimen/main_view_standard_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/fund_details_item"/>

        <TextView
            android:id="@+id/fund_mix_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_view_standard_margin"
            android:text="@string/fund_mix_title"
            android:textSize="@dimen/title_text_size_medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <include layout="@layout/donut_chart"
            android:id="@+id/donut_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/main_view_standard_margin"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_view_standard_margin"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/fund_growth_assets"
                android:textSize="@dimen/title_text_size_medium"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/growth_assets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_view_standard_margin"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:textSize="@dimen/title_text_size_medium"
                android:textStyle="bold"
                android:textColor="@color/green_start"
                tools:text="20%"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_view_standard_margin"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/fund_income_assets"
                android:textSize="@dimen/title_text_size_medium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/income_assets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_view_standard_margin"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:textSize="@dimen/title_text_size_medium"
                android:textStyle="bold"
                android:textColor="@color/blue_start"
                tools:text="22%"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>